add apache modules proxy, wsgi, proxy_http and cobbler.yaml file.

--- a/data/class_groups/build.yaml
+++ b/data/class_groups/build.yaml
@@ -1,5 +1,8 @@
 classes:
   - apache
+  - apache::mod::proxy
+  - apache::mod::wsgi
+  - apache::mod::proxy_http
   - naginator
   - collectd
   # - coi::profiles::cobbler_server
