Removed eth0 from MongoDB bind address
The bind address specified for MongoDB was hardcoded to eth0.
This broke deployments which use different interface for default
interface.  Updated the configuration to use address of default
interface.

Closes-Bug: #1287306

--- a/data/hiera_data/enable_ha/true.yaml
+++ b/data/hiera_data/enable_ha/true.yaml
@@ -42,4 +42,4 @@ nova::compute::libvirt::libvirt_type: kvm
 # mongo replica set name
 mongodb::replset: 'rsmain'
 # mongodb bind addresses
-mongodb::bind_ip: ['127.0.0.1', "%{ipaddress_eth0}"]
+mongodb::bind_ip: ['127.0.0.1', "%{ipaddress}"]
