Added mon/osd configuration to the full_ha scenario
Added the mon class group to the controller role
in the full_ha scenario. Added the new role compute_and_ceph
to allow users to use compute nodes for OSDs. Modified the
full_ha.yaml to use rbd as the default store for cinder.

--- a/data/scenarios/full_ha.yaml
+++ b/data/scenarios/full_ha.yaml
@@ -18,6 +18,7 @@ roles:
       - controller
       - provider_network_controller
       - test_file
+      - ceph_mon
   load_balancer:
     classes:
       - coe::base
@@ -30,6 +31,15 @@ roles:
       - cinder::setup_test_volume
     class_groups:
       - compute
+  compute_and_osd:
+    classes:
+      - coe::base
+      - coe::network::interface
+      - naginator::compute_target
+      - cinder::setup_test_volume
+    class_groups:
+      - compute
+      - ceph_osd
   swift_proxy:
     classes:
       - coe::base
