Added mon/osd configuration to the full_ha scenario
Added the mon class group to the controller role
in the full_ha scenario. Added the new role compute_and_ceph
to allow users to use compute nodes for OSDs. Modified the
full_ha.yaml to use rbd as the default store for cinder.

--- a/data/hiera_data/user.full_ha.yaml
+++ b/data/hiera_data/user.full_ha.yaml
@@ -111,3 +111,6 @@ openstack::swift::storage-node::storage_devices:
   - 'sdd'
   - 'sde'
   - 'sdf'
+
+# Use ceph as the default backend for block storage
+cinder_backend: rbd
