Allow Glance to COW images to Cinder Volumes
This bypasses the downloading of the image to a volume
and replaces it by doing a direct COW within Ceph.

--- a/data/data_mappings/glance_backend/rbd.yaml
+++ b/data/data_mappings/glance_backend/rbd.yaml
@@ -4,3 +4,5 @@ ceph_configuration_file:
   - glance::backend::rbd::rbd_store_ceph_conf
 glance_ceph_pool:
   - glance::backend::rbd::rbd_store_pool
+glance_enable_cow:
+  - glance::api::show_image_direct_url
