Drop galera references from old module

--- a/data/class_groups/galera_database.yaml
+++ b/data/class_groups/galera_database.yaml
@@ -1,5 +1,4 @@
 classes:
-  - galera::server
-  - galera::monitor
+  - galera
   - mysql::server::account_security
   - coi::profiles::openstack::databases::mysql
