--- a/data/cobbler/cobbler.yaml
+++ b/data/cobbler/cobbler.yaml
@@ -12,7 +12,7 @@ netcfg/choose_interface=auto"
 
 
 node-global:
-  #power_type should be ipmilan for CIMC, or cisco_ucs for UCS-M
+  #power_type should be ipmilan for CIMC, or ucs for UCS-M
   power_type: "ipmilan"
   power_user: "admin"
   power_pass: "password"
