--- a/data/data_mappings/common.yaml
+++ b/data/data_mappings/common.yaml
@@ -223,6 +223,7 @@ domain_name:
   - coe::base::domain_name
 public_interface:
   - collectd::management_interface
+  - cinder::backend::iscsi::iscsi_ip_address
 pocket:
   - coe::base::pocket
   - coi::profiles::cobbler_server::pocket
